# ShoppingAIAssistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env-example  pyproject.toml  settings.py
src/: app.py  streamlit_main.py
src/db/: db_models.py  db_setup.py  db_singleton.py
src/db/common/: model.py
src/db/product/: enums.py  model.py  repository.py
src/db/recipe/: enums.py  model.py  repository.py
src/llm/: graph.py  graph_schema.py
src/llm/agents/budgeting/: agent_role.md  budgeting.py  schemas.py
src/llm/agents/common/: base_agent.py
src/llm/agents/finalizer/: agent_role.md  finalizer.py
src/llm/agents/planner/: agent_role.md  planner.py  schemas.py
src/llm/agents/product_finder/: agent_role.md  product_finder.py  schemas.py
src/llm/agents/recipe/: agent_role.md  recipe.py  schemas.py
src/llm/agents/supervisor/: supervisor.py
src/redis_client/: client.py  services.py
src/routers/: routers.py
src/routers/audio/: router.py  services.py
src/routers/products/: router.py  schemas.py  services.py
src/routers/recipes/: router.py  schemas.py  services.py
src/template/: audio.html
src/tests/: test_graph.py
